c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/extra_credit/union_var_tag_paren.c
struct s {
    int y;
};

int main(void) {
    // can't parenthesize union tag
    union(s) var;

    return 0;
}